Improved documentation, fixed some npm warnings, added test project.
# Conflicts:
#	tests/test_project/package.json
#	tests/test_project/webmakefile.py

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 
 
+1.0.4
+-----
+- Improved documentation.
+- Fixed some npm warnings.
+- Added test project.
+
+
 1.0.3
 -----
 - Added Python 2 support.
