--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 
+1.0.16
+------
+- Add support for new-style middleware in Django 1.10.
+
+
 1.0.15
 ------
 - copyfiles module creates intermediate target dirs as needed inside target root dir.
