--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 
+4.1.2
+-----
+- Watch mode: Bugfix in shutdown behaviour
+- Watch mode: Ignore "Closed No Write" events
+
+
 4.1.1
 -----
 - Watch mode: Better signal handling for linux
